<resources>
    <string name="app_name">Snake</string>
    <string name="startGame">Start Game</string>
    <string name="game_over">Game Over</string>
    <string name="point">"Point: %1$d"</string>
    <string name="your_name">Your name:</string>
    <string name="pleaseFill">Please file this</string>
    <string name="save">Save</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="settings">Settings</string>
    <string name="control">Control:</string>
    <string-array name="controls">
        <item>On sliding</item>
        <item>On click</item>
        <item>Accelerometer</item>
    </string-array>
</resources>