<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaveActivity">


    <TextView
        android:id="@+id/pointText"
        android:layout_width="113dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/point"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameOverText" />

    <TextView
        android:id="@+id/gameOverText"
        android:layout_width="139dp"
        android:layout_height="35dp"
        android:text="@string/game_over"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:hint="@string/pleaseFill"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pointText" />

    <TextView
        android:id="@+id/yourNameText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/your_name"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/nameText"
        app:layout_constraintTop_toTopOf="@+id/pointText" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameText" />


</androidx.constraintlayout.widget.ConstraintLayout>